升级org.jetbrains.intellij.platform 至2.10.4 升级gradle至8.14.3 升级org.jetbrains.kotlin.jvm 至1.9.25 实现快捷指令三tab页基本框架